using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class gameConstants {

    public const string cameraLookTarget = "cameraLookTarget";
    public const string muzzle = "Muzzle";
    public const string gameManager = "_gameManager";
    public const string vertical = "Vertical";
    public const string horizontal = "Horizontal";

    public const string isWalking = "IsWalking";
    public const string isSprinting = "IsSprinting";
    public const string isCrouching = "IsCrouching";

    public const string jump = "Jump";

}
